# simplicial-memories

./: .gitignore  README.md  TODO.md  flake.nix  pyproject.toml  requirements.txt  schema_explorer.py  simplex_representaitons.ipynb  simplex_representation.ipynb
paper/: main.typ  refs.bib  simplex_representation.ipynb
src/: __init__.py  database.py  extraction.py  pipeline.py  pyproject.toml  retrieval.py  schema.sql  simplex_tree.py
