[project]
name = "knowledge-graph-experiments"
version = "0.1.0"
description = "Simplicial complex knowledge graph for agent memory"
requires-python = ">=3.13"
dependencies = [
    "dedalus-labs",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
